@@ -45,6 +45,10 @@ version 2.80
 	Fix crash on startup with a --synth-domain which has no prefix.
 	Introduced in 2.79. Thanks to Andreas Engel for the bug report.
 
+	Fix missing EDNS0 section in some replies generated by local
+	DNS configuration which confused systemd-resolvd. Thanks to
+	Steve Dodd for characterising the problem.
+
 
 version 2.79
 	Fix parsing of CNAME arguments, which are confused by extra spaces.
